--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -494,3 +494,34 @@
 	color: #FFFFFF;
 	padding: 15px 32px;
 }
+
+/* goals and methodology*/
+
+.goals_img1 {
+	background: url('../images/goals1.png');
+	background-size: cover;
+	width: 100%;
+	height: 50.13vw;
+}
+
+.goals_padtop {
+	padding: 10vw 0 0 0;
+}
+
+.goals_toptittle p {
+	font-family: Marcellus;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 48px;
+	line-height: 60px;
+	color: #000000;
+}
+
+.goals_toptext p {
+	font-family: Lato;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 20px;
+	line-height: 30px;
+	color: #000000;
+}
