--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -14,6 +14,12 @@
 }
 
 @font-face {
+	font-family: Lato;
+	src: url('fonts/Lato-Light.ttf');
+	font-weight: 300;
+}
+
+@font-face {
 	font-family: Marcellus;
 	src: url('fonts/Marcellus-Regular.ttf');
 }
@@ -512,7 +518,7 @@
 }
 
 .goals_padtop {
-	padding: 10vw 0 0 0;
+	padding: 9vw 0 0 0;
 }
 
 .goals_toptittle p {
@@ -520,7 +526,7 @@
 	font-style: normal;
 	font-weight: normal;
 	font-size: 48px;
-	line-height: 60px;
+	line-height: 50px;
 	color: #132811;
 }
 
@@ -528,9 +534,43 @@
 	font-family: Lato;
 	font-style: normal;
 	font-weight: normal;
-	font-size: 20px;
+	font-size: 18px;
 	line-height: 30px;
 	color: #000000;
+
+	text-align: justify;
+  	text-justify: inter-word;
+}
+
+@media(max-width: 1400px){
+	.goals_toptittle p {
+		font-size: 38px;
+		line-height: 46px;
+	}
+	.goals_toptext p {
+		font-size: 16px;
+		line-height: 24px;
+	}
+}
+@media(max-width: 1000px){
+	.goals_toptittle p {
+		font-size: 30px;
+		line-height: 36px;
+	}
+	.goals_toptext p {
+		font-size: 14px;
+		line-height: 20px;
+	}
+}
+@media(max-width: 800px){
+	.goals_toptittle p {
+		font-size: 28px;
+		line-height: 36px;
+	}
+	.goals_toptext p {
+		font-size: 13px;
+		line-height: 18px;
+	}
 }
 
 .goals_mainTitleMargin {
@@ -587,4 +627,138 @@
 
 	text-align: justify;
   	text-justify: inter-word;
+}
+
+@media(max-width: 1400px){
+	.goals_mainTitle {
+		font-size: 36px;
+		line-height: 46px;
+	}
+	.goals_title {
+		font-size: 18px;
+		line-height: 30px;
+	}
+	.goals_subtitle {
+		font-size: 22px;
+		line-height: 28px;	
+	}
+	.goals_text1 {
+		font-size: 14px;
+		line-height: 22px;
+	}
+	.goals_text2 {
+		font-size: 13px;
+	line-height: 22px;
+	}
+}
+@media(max-width: 1000px){
+	.goals_mainTitle {
+		font-size: 32px;
+		line-height: 36px;
+	}
+	.goals_title {
+		font-size: 16px;
+		line-height: 26px;
+	}
+	.goals_subtitle {
+		font-size: 20px;
+		line-height: 22px;	
+	}
+	.goals_text1 {
+		font-size: 13px;
+		line-height: 18px;
+	}
+	.goals_text2 {
+		font-size: 12px;
+	line-height: 18px;
+	}
+}
+@media(max-width: 800px){
+	.goals_mainTitle {
+		font-size: 26px;
+		line-height: 30px;
+	}
+	.goals_title {
+		font-size: 14px;
+		line-height: 18px;
+	}
+	.goals_subtitle {
+		font-size: 16px;
+		line-height: 18px;	
+	}
+	.goals_text1 {
+		font-size: 12px;
+		line-height: 16px;
+	}
+	.goals_text2 {
+		font-size: 11px;
+	line-height: 16px;
+	}
+}
+
+/* ----------Who we are ----------------------------------*/
+
+.who_img1 {
+	background: url('../images/who1.png');
+	background-size: cover;
+	width: 100%;
+	height: 33.47vw;
+}
+.who_topText {
+	padding: 6vw 45vw 0 15vw;
+}
+.who_topText  p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 48px;
+	line-height: 61px;
+	color: #FFFFFF;
+}
+
+.who_title {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 42px;
+	line-height: 54px;
+	color: #132811;
+}
+
+.who_name {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 28px;
+	line-height: 36px;
+	color: #285424;
+
+	margin-bottom: 0vw;
+}
+
+.who_role {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 11px;
+	line-height: 24px;
+	letter-spacing: 0.16em;
+	text-transform: uppercase;
+	color: #E96F62;
+}
+
+.who_text{
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	line-height: 26px;
+	color: #000000;
+
+	text-align: justify;
+
+}
+
+.who_marginTop{
+	margin-top: 5vw;
 }
