--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -801,3 +801,162 @@
 	line-height: 30px;
 	color: #000000;
 }
+
+.contact_form {
+	padding: 11.3vw 12.5vw 1vw 14.5vw;
+}
+
+.contact_formPadTop {
+	padding-top: 5vw;
+}
+
+.contact_marginTop {
+	margin-top: -9vw;
+}
+
+.contact_removePadLeft {
+	padding-left: 0px!important;
+}
+
+.contact_fromPadLeftRight {
+	padding-left: 4vw;
+	padding-right: 4vw;
+}
+
+.form-control {
+	background-color: #E5EAF3!important;
+}
+
+.contact_formTitle p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 42px;
+	line-height: 54px;
+	color: #101011;
+}
+
+.contact_formSubTitle p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 30px;
+	color: #000000;
+}
+
+.contact_btn {
+	background-color: #E96F62!important;
+}
+
+/* ----------------- ANBI --------------------------- */
+
+.anbi_img1 {
+	background: url('../images/ANBI1.png');
+	background-size: cover;
+	width: 100%;
+	height: 41.3vw;
+}
+
+.anbi_paddingTop {
+	padding-top: 11vw;;
+}
+.anbi_paddingTop2 {
+	padding-top: 4vw;;
+}
+
+.anbi_topTitle p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 48px;
+	line-height: 61px;
+	color: #000000;
+}
+
+.anbi_topText p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 30px;
+	color: #000000;
+}
+
+.anbi_title p {
+	padding-top: 4vw;
+	padding-bottom: 3vw;
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 40px;
+	line-height: 61px;
+	color: #132811;
+}
+
+.anbi_text p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 18px;
+	line-height: 22px;
+	color: #000000;
+	text-align: justify;
+}
+
+.anbi_subTitle p {
+	padding-top: 3vw;
+	font-family: 'Lato';
+	font-style: normal;
+	font-size: 30px;
+	line-height: 61px;
+	color: #132811;
+}
+
+.anbi_subTitle2 p {
+	padding-top: 2vw;
+	font-family: 'Lato';
+	font-weight: bold;
+	font-style: normal;
+	font-size: 18px;
+	line-height: 20px;
+	color: #285424;
+}
+
+.anbi_paddingBot {
+	padding-bottom: 15vw;
+}
+
+/* --------------------------- projects --------------------- */
+
+.projects_img1 {
+	background: url('../images/projects1.png');
+	background-size: cover;
+	width: 100%;
+	height: 41.3vw;
+}
+
+.projects_paddingTop {
+	padding-top: 9vw;;
+}
+.projects_paddingTop2 {
+	padding-top: 2vw;;
+}
+
+.projects_topTitle p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 48px;
+	line-height: 61px;
+	color: #000000;
+}
+
+.projects_topText p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 20px;
+	line-height: 30px;
+	color: #000000;
+}
