--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -810,8 +810,8 @@ html {
 	font-family: 'Lato';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 48px;
-	line-height: 61px;
+	font-size: 2.6rem;
+	line-height: 3rem;
 	color: #000000;
 }
 
@@ -819,8 +819,8 @@ html {
 	font-family: 'Lato';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 20px;
-	line-height: 30px;
+	font-size: 1.1rem;
+	line-height: 1.8rem;
 	color: #000000;
 }
 
@@ -845,16 +845,23 @@ html {
 	padding-right: 4vw;
 }
 
+.contact_formPadRight {
+	padding-right: 3vw !important;
+}
+.contact_formPadRight2 {
+	padding-right: 5vw !important;
+}
+
 .form-control {
-	background-color: #E5EAF3!important;
+	background-color: #d1d7d3!important;
 }
 
 .contact_formTitle p {
 	font-family: 'Lato';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 42px;
-	line-height: 54px;
+	font-size: 2.3rem;
+	line-height: 3rem;
 	color: #101011;
 }
 
@@ -862,13 +869,55 @@ html {
 	font-family: 'Lato';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 20px;
-	line-height: 30px;
+	font-size: 1.1rem;
+	line-height: 1.5rem;
 	color: #000000;
 }
 
+.contact_formTitle2 label, p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 0.9rem;
+	line-height: 1rem;
+	color: #101011;
+}
+
 .contact_btn {
-	background-color: #E96F62!important;
+	background-color: #88a287!important;
+	padding: 1vw 2vw !important;
+	color: #FFFFFF !important;
+}
+
+.contact_margin {
+	margin-top: -5vw;
+}
+.contact_margin2 {
+	margin-top: -7vw;
+}
+.contact_margin3 {
+	margin-bottom: 3vw;
+}
+.contact_margin4 {
+	margin-bottom: 2vw;
+}
+
+.contact_text p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 1.1rem;
+	line-height: 1.2rem;
+	color: #000000;
+}
+
+.contact_text2 p {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 1rem;
+	line-height: 0.5rem;
+	color: #000000;
 }
 
 /* ----------------- ANBI --------------------------- */
