--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -727,24 +727,29 @@ html {
 	height: 33.47vw;
 }
 .who_topText {
-	padding: 6vw 45vw 0 15vw;
+	padding: 10vw 45vw 0 15vw;
 }
 .who_topText  p {
 	font-family: 'Lato';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 48px;
-	line-height: 61px;
-	color: #FFFFFF;
+	font-size: 2.6rem;
+	line-height: 3rem;
+	color: #afb6ae;
 }
 
+.whoPaddingBot {
+	padding-bottom: 3vw;
+}
+.whoPaddingBot2 {
+	padding-bottom: 1vw;
+}
 .who_title {
 	font-family: 'Lato';
 	font-style: normal;
 	font-weight: 400;
-	font-size: 42px;
-	line-height: 54px;
-	color: #132811;
+	font-size: 2.4rem;
+	color: #173b14;
 }
 
 .who_name {
@@ -758,34 +763,39 @@ html {
 	margin-bottom: 0vw;
 }
 
-.who_role {
-	font-family: 'Lato';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 11px;
-	line-height: 24px;
-	letter-spacing: 0.16em;
-	text-transform: uppercase;
-	color: #E96F62;
-}
-
 .who_text{
 	font-family: 'Lato';
 	font-style: normal;
 	font-weight: 300;
-	font-size: 18px;
-	line-height: 26px;
+	font-size: 1rem;
+	line-height: 1.3rem;
 	color: #000000;
-
 	text-align: justify;
+}
 
+.who_text2 {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 0.8rem;
+	line-height: 2rem;
+	color: #000000;
+	text-align: justify;
 }
 
 .who_marginTop{
-	margin-top: 5vw;
+	margin-top: 4vw;
 }
 
-
+.who_histText {
+	font-family: 'Lato';
+	font-style: normal;
+	font-weight: 300;
+	font-size: 1rem;
+	line-height: 2rem;
+	color: #000000;
+	text-align: justify;
+}
 /* -------------------- contact us ---------------------------- */
 
 .contact_img1 {
