--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1183,12 +1183,11 @@ html {
 
 .projectstmp_desc p {
 	padding-top: 2vw;
-	padding-bottom: 2vw;
 	font-family: 'Lato';
 	font-style: normal;
 	font-weight: 300;
 	font-size: 1.2rem;
-	line-height: 22px;
+	line-height: 1.5rem;
 	color: #000000;
 }
 
@@ -1275,13 +1274,14 @@ html {
 	padding: 1vw 0 0 0;
 }
 
+.projectstmp_padding4 {
+	padding: 5vw 0 0 0;
+}
+
 .projectstmp_photo {
 	margin-top: -2vw;
 }
 
-.porjectstmp_text {
-	padding-top: 5vw;
-}
 .projectstmp_photoBackGorund {
 	background: url('../images/projectstmp3.png');
 	background-size: cover;
@@ -1293,16 +1293,16 @@ html {
 	padding-top: 2vw;
 }
 
-.porjectstmp_text a {
+.projectstmp_text a {
 	font-family: Lato;
     font-style: normal;
     font-weight: bold;
     font-size: 1.1rem;
-    line-height: 1rem;
+    line-height: 1.1rem;
     color: #E96F62;
 }
 
-.porjectstmp_text a:hover {
+.projectstmp_text a:hover {
 	color: #ab5349;
 	text-decoration: none;
 }
@@ -1313,9 +1313,22 @@ html {
 .projectstmp_text2 p {
 	font-family: 'Lato';
 	font-size: 1rem;
-	line-height: 1rem;
+	line-height: 1.2rem;
 	text-align: justify;
 	color: #000000;
+}
+
+.projectstmp_erasmus {
+	padding-top: 3vw;
+}
+
+.embeded-video embed {
+    height: 39vw;
+    width: 70vw;
+}
+
+.embeded-video {
+	padding: 7vw 0 5vw 0;
 }
 
 /* ----- caucan ----*/
@@ -1336,4 +1349,13 @@ html {
 	font-size: 2.6rem;
 	line-height: 61px;
 	color: #132811;
+}
+
+/* ------ ParticipArt---------- */
+
+.projectsPaticipArt_img1 {
+	background: url('../images/participArt/projParticipArt.png');
+	background-size: cover;
+	width: 100%;
+	height: 42.3vw;
 }
